# Ner_Llm_Gpt

./: .gitignore  README.md  dockerfile  nltk_ner.py  phoGPTHelper.py  test.py  vinallamaGPTHelper.py  vinbigdatallama.py
PhoWhisper/: main.py
algorithms/: main.py
aurora/: main.py
chatgpt4api/: main.py
claude/: main.py
cpplearning/: CMakeLists.txt  main.cpp  test.json
cpplearning/libs/: test.cpp  test.h
cpplearning/libs/cloud/: aws.cpp  aws.h
cpplearning/libs/tensorflow/: readme.md
deepfacefake/: InsightFaceDectectRecognition.py  blending.py  framebuilder.py  ganimage2imagetranslation.py  imagetranslation.py
dicom/: Altea_t1_sag_tse_DR_77233508.dcm  Vida_Knee.MR.Comp_DR-Gain_DR.1005.1.2021.04.27.14.44.20.58.57125557.dcm  test.py
embeding_RAG/: main.py
gpt2usage/: gpt2helper.py  main.py  shortjokes.csv  test.py  test_vntokenizergpt2.py  train.py  valid.py  vietnamesetokenizer.py
howtomakeachatbot/: database.py  readme.md  test.py  textembeding.py
keras/: kerascvyolov8predict.py  kerascvyolov8train.py  objectdetectrentina.py  readme.md
llama3/: finetune.py  main.py  readme.md  token_dataset.py
llamatiny/: main.py
llm_functioncall_agent/: readme.md
mediapipe/: Dockerfile  MobileFaceNet.py  config.prod.py  config.py  convetchunom2coco.py  convethannom2coco.py  export_fixed_tflite.py  export_nms_tflite.py  inference.py  nlvnpf-0137-01-045.txt  objectdetect.py  readme.md  testinterpreter.py  testkerascv.py  tfliteconvert.py  train.checkpoint.py  train.py  train_keras_cv.py
mistral/: main.py
mistralvn/: dockerfile  dockerfile.base.rocm  (+7 more)
(+21 files in other folders)
